# Project_SDL

./: CMakeLists.txt  README.md  main.cpp
Animals/: Animal.cpp  Animal.h  CMakeLists.txt  Sheep.cpp  Sheep.h  ShepherdDog.cpp  ShepherdDog.h  Wolf.cpp  Wolf.h
Base_Project/Project_SDL_Part1_base/: CMakeLists.txt  Project_SDL1.cpp  Project_SDL1.h  main.cpp
GameEngine/: CMakeLists.txt  Engine.cpp  Engine.h  Game.cpp  Game.h
Objects/: CMakeLists.txt  ClickableObject.h  GameObject.cpp  GameObject.h  GameProperty.h  LifeCycleObject.h  MovingObject.cpp  MovingObject.h  PredatorObject.cpp  PredatorObject.h  PreyObject.cpp  PreyObject.h  RenderedObject.cpp  RenderedObject.h  TimerObject.cpp  TimerObject.h
PlayableCharacters/: CMakeLists.txt  PlayableCharacter.cpp  PlayableCharacter.h  Shepherd.cpp  Shepherd.h
